GoverningBody AddAdministrator Modal fix aligning

--- a/src/pages/GoverningBody/AddAdministratorModal/AddAdministrationModal.less
+++ b/src/pages/GoverningBody/AddAdministratorModal/AddAdministrationModal.less
@@ -1,29 +1,8 @@
 .addAdministrationModal {
-  .adminTypeFormItem {
-    margin-bottom: 12px;
-  }
 
-  .ant-form-horizontal .ant-form-item-label {
-    padding: 0;
+  .ant-form-item-required {
+    align-items: flex-start;
   }
-
-  .formSelect {
-    width: 100%;
-  }
-
-  .cancelConfirmButtons {
-    margin-bottom: 0px;
-  }
-
-  .cardButton {
-    margin-bottom: 1.2rem;
-  }
-}
-
-.formItemExplain {
-  max-width: 320px;
-  width: 100%;
-  float: right;
 }
 
 @media (max-width: 575px) {
@@ -35,4 +14,3 @@
     }
   }
 }
-
