datePicker width fixed

--- a/src/pages/Regions/Form.module.css
+++ b/src/pages/Regions/Form.module.css
@@ -12,6 +12,10 @@
     width:320px;
   }
 
+  .datePicker { 
+    width: 100%;
+  }
+
   @media (max-width: 576px){
     .inputField{
     width: 100%;
