--- a/src/pages/Actions/ActionEvent/EventInfo/EventInfo.less
+++ b/src/pages/Actions/ActionEvent/EventInfo/EventInfo.less
@@ -308,3 +308,9 @@ td {
     background: #fafafa;
   }
 }
+
+.hovering-cardbody > .ant-card-body:hover{
+  text-decoration: none;
+  color: black;  
+  
+}
