User can input active link to the Location field

--- a/src/pages/Actions/ActionEvent/EventInfo/EventDetails.less
+++ b/src/pages/Actions/ActionEvent/EventInfo/EventDetails.less
@@ -11,11 +11,12 @@
     width: 200px;
   }
   font-weight: bold;
-  width: auto ;
+  width: 190px ;
   font-size: 14px;
   padding-right: 10px;
-  overflow: auto;
+  overflow: hidden;
   padding-top: 10px;
+  text-overflow: ellipsis;
 }
 
 .descriptions{
@@ -24,8 +25,8 @@
   display: block;
   align-items: flex-start;
   min-height: 452px;
+  white-space: nowrap;
 }
-
 
 .dataDescription {
   .generalLabel();
