--- a/src/pages/Actions/ActionEvent/EventInfo/EventDetails.less
+++ b/src/pages/Actions/ActionEvent/EventInfo/EventDetails.less
@@ -11,7 +11,7 @@
     width: 200px;
   }
   font-weight: bold;
-  width: 190px ;
+  width: 190px;
   font-size: 14px;
   padding-right: 10px;
   overflow: hidden;
@@ -21,7 +21,6 @@
 
 .descriptions{
   width: auto;
-  padding: 5px 7px 5px 7px;
   display: block;
   align-items: flex-start;
   min-height: 452px;
@@ -48,4 +47,9 @@
 .eventLabel {
   font-size: 14px;
   color: #48484866;
+}
+
+.ant-col-sm-offset-1 {
+  margin: 0;
+  padding: 10px;
 }
