added classes col-title, col-value

--- a/src/pages/AnnualReport/AnnualReportTable/AnnualReportTable.less
+++ b/src/pages/AnnualReport/AnnualReportTable/AnnualReportTable.less
@@ -54,8 +54,16 @@
     flex-flow: row;
 }
 
-.tableHeader .ant-col {
+.tableHeader {
     margin: auto;
+}
+
+.col-title{
+    margin: auto auto auto 0;
+}
+
+.col-value{
+    margin: auto 0 auto auto;
 }
 
 .tableHeaderSorting {
