--- a/src/pages/Actions/ActionEvent/EventInfo/EventInfo.less
+++ b/src/pages/Actions/ActionEvent/EventInfo/EventInfo.less
@@ -36,6 +36,7 @@
 .event-info-header {
   box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+  justify-content: center;
 }
 
 .eventGallary{
@@ -307,4 +308,10 @@ td {
     overflow-wrap: break-word;
     background: #fafafa;
   }
+}
+
+.hovering-cardbody > .ant-card-body:hover{
+  text-decoration: none;
+  color: black;  
+  
 }
