--- a/src/pages/Actions/ActionEvent/EventInfo/EventDetails.less
+++ b/src/pages/Actions/ActionEvent/EventInfo/EventDetails.less
@@ -11,21 +11,21 @@
     width: 200px;
   }
   font-weight: bold;
-  width: auto ;
+  width: 190px;
   font-size: 14px;
   padding-right: 10px;
-  overflow: auto;
+  overflow: hidden;
   padding-top: 10px;
+  text-overflow: ellipsis;
 }
 
 .descriptions{
   width: auto;
-  padding: 5px 7px 5px 7px;
   display: block;
   align-items: flex-start;
   min-height: 452px;
+  white-space: nowrap;
 }
-
 
 .dataDescription {
   .generalLabel();
@@ -47,4 +47,9 @@
 .eventLabel {
   font-size: 14px;
   color: #48484866;
+}
+
+.ant-col-sm-offset-1 {
+  margin: 0;
+  padding: 10px;
 }
