Sorting arrows alignment fix

--- a/src/pages/Statistics/StatisticsCities.less
+++ b/src/pages/Statistics/StatisticsCities.less
@@ -23,6 +23,11 @@
   background-color: transparent;
 }
 
+.ant-table-cell .ant-table-column-sorters-with-tooltip .ant-table-column-sorters {
+  display: flex;
+  justify-content: space-between;
+}
+
 #rowIcon{
   font-size: 20px;
 }
