--- a/src/pages/Statistics/StatisticsRegions.less
+++ b/src/pages/Statistics/StatisticsRegions.less
@@ -21,6 +21,11 @@
   background-color: transparent;
 }
 
+.ant-table-cell .ant-table-column-sorters-with-tooltip .ant-table-column-sorters {
+  display: flex;
+  justify-content: space-between;
+}
+
 .formGlobal {
   margin-left: auto;
   margin-right: auto;
