--- a/src/pages/RegionsBoard/RegionBoard.less
+++ b/src/pages/RegionsBoard/RegionBoard.less
@@ -1,15 +1,217 @@
+h2.ant-typography,
+h3.ant-typography,
+h4.ant-typography {
+    text-align: center;
+    color: #3c5438;
+}
+
+.status{
+    margin-right: -20px;
+    width: 220px;
+    margin-top: -15px;
+    float: right;
+    box-shadow: 0 0 0 3px, 0 0 0 2px inset;
+    border: 2px solid transparent;
+    border-radius: 4px;
+    display: inline-block;
+    padding: 5px 2px;
+    line-height: 22px;
+    font-size: 24px;
+    font-family: 'Black Ops One', cursive;
+    text-transform: uppercase;
+    text-align: center;
+    oparegionBoard: 0.4;
+    transform: rotate(9deg);
+}
+
+.regionBoardProfile {
+    .ant-card-body {
+        padding-top: 10px;
+        height: 100%;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .regionBoardCard {
+        height: 100%;
+        text-align: center;
+        cursor: default;
+
+        .regionBoardPhotos {
+            .regionBoardLogo {
+                width: 100%;
+                height: auto;
+                max-height: 360px;
+            }
+            
+            .mainMap {
+                display: block;
+                width: 100%;
+                height: 100%;
+                border: none;
+                box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+                transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+              }
+              
+              .mainMap:hover {
+                box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+              }
+        }
+
+        .regionBoardInfo {
+            .ant-typography {
+                margin-top: 0.2rem;
+                margin-bottom: 0;
+            }
+
+            .regionBoardHead {
+                margin-top: 20px;
+            }
+        }
+
+        .regionBoardMoreButton {
+            margin: auto 0 0;
+
+            .regionBoardInfoButton {
+                width: 160px;
+            }
+
+            .addReportIcon {
+                font-size: 30px;
+                color: #3c5438;
+                position: absolute;
+                bottom: 25px;
+                right: 3%;
+            }
+
+            @media (min-width: 375px) {
+                .addReportIcon {
+                    right: calc(50% - 140px);
+                }
+            }
+        }
+
+        .regionBoardButtons {
+            margin-top: 25px;
+
+            .regionBoardInfoButton {
+                width: 160px;
+            }
+
+            @media (max-width: 575px) {
+                .regionBoardInfoButton {
+                    margin-bottom: 10px;
+                }
+            }
+
+            .regionBoardInfoIcon {
+                font-size: 28px;
+            }
+            .regionBoardInfoIconDelete{
+                font-size: 28px;
+                color: #910202;
+            }
+            .regionBoardInfoIconDelete :hover{
+                color: #690606;
+                cursor: pointer;
+            }
+
+            @media (max-width: 575px) {
+                .regionBoardIcons {
+                    justify-content: center;
+                }
+            }
+        }
+
+        .regionBoardItems {
+            .regionBoardMemberItem {
+                cursor: pointer;
+
+                .addFollower {
+                    color: #3c5438;
+                }
+
+                .approveIcon {
+                    color: #3c5438;
+                    position: absolute;
+                    bottom: 55px;
+                    right: calc(50% - 50px);
+                    font-size: 22px;
+                }
+
+                .approveIcon :hover {
+                    color: #536150;
+                    font-size: 28px;
+                }
+            }
+
+            .regionBoardMemberItem :hover {
+                text-decoration: underline;
+            }
+
+            .regionBoardDocumentItem {
+                cursor: pointer;
+
+                .documentIcon {
+                    font-size: 60px;
+                }
+
+                .documentText {
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    display: -webkit-box;
+                    -webkit-line-clamp: 1;
+                    -webkit-box-orient: vertical;
+                }
+            }
+            .userName {
+                overflow: hidden;
+                text-overflow: ellipsis;
+                display: -webkit-box;
+                -webkit-line-clamp: 1;
+                -webkit-box-orient: vertical;
+                margin: 0px;
+            }
+        }
+        .regionBoardItems1 {
+            margin: auto !important;
+            .regionBoardMemberItem {
+                cursor: pointer;
+
+                .addFollower {
+                    color: #3c5438;
+                }
+            }
+
+            .regionBoardMemberItem :hover {
+                text-decoration: underline;
+            }
+
+            .userName {
+                overflow: hidden;
+                text-overflow: ellipsis;
+                display: -webkit-box;
+                -webkit-line-clamp: 1;
+                -webkit-box-orient: vertical;
+                margin: 0px;
+            }
+        }
+    }
+}
+
 .regionBoardMoreItems {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
       
-    .cityMember :hover{
+    .regionBoardMember :hover{
         cursor: pointer;
     }
       
     .detailsCard {
         margin: 15px;
-        width: 250px;
+        width: 242px;
         text-align: center;
 
         
