--- a/src/pages/SignUp/SignUp.module.css
+++ b/src/pages/SignUp/SignUp.module.css
@@ -13,7 +13,7 @@
     user-select: none;
 }
 
-.MyInput{
+.MyInput, .MyDatePicker {
     background: #f7f9fc !important;
     border: 0 !important;
     outline: none !important;
@@ -22,6 +22,32 @@
     border-bottom: 1px solid #dfe7f1 !important;
     width: 100% !important;
     text-align: left;
+}
+
+.MySelect [class=ant-select-selector], 
+.MySelect input {
+    background: #f7f9fc !important;
+    border: 0 !important;
+    outline: none !important;
+    text-indent: 0px !important;
+    height: 44px !important;
+    border-bottom: 1px solid #dfe7f1 !important;
+    width: 100% !important;
+    text-align: left;
+    display: flex;
+    align-items: center;
+    vertical-align: middle;
+}
+
+.MyReactInputMask {
+    background: #f7f9fc !important;
+    border: 0 !important;
+    outline: none !important;
+    text-indent: 0px !important;
+    height: 44px !important;
+    border-bottom: 1px solid #dfe7f1 !important;
+    width: 100% !important;
+    text-align: left;;
 }
 
 #confirmButton{
