Fixed buttons aligning #2515

--- a/src/pages/Club/AddAdministratorModal/AddAdministrationModal.less
+++ b/src/pages/Club/AddAdministratorModal/AddAdministrationModal.less
@@ -13,6 +13,9 @@
   
     .cancelConfirmButtons {
       margin-bottom: 0px;
+      .ant-row {
+        align-items: baseline;
+      }
     }
   
     .cardButton {
