--- a/src/pages/SignUp/SignUp.module.css
+++ b/src/pages/SignUp/SignUp.module.css
@@ -13,7 +13,7 @@
     user-select: none;
 }
 
-.MyInput, .MyDatePicker {
+.MyInput {
     background: #f7f9fc !important;
     border: 0 !important;
     outline: none !important;
@@ -22,6 +22,10 @@
     border-bottom: 1px solid #dfe7f1 !important;
     width: 100% !important;
     text-align: left;
+}
+
+.MyDatePicker {
+    width: 100% !important;
 }
 
 .MySelect [class=ant-select-selector], 
