--- a/src/pages/userPage/personalData/PersonalData.less
+++ b/src/pages/userPage/personalData/PersonalData.less
@@ -1,5 +1,9 @@
 .container{
     width: 100%;
+
+    align-items: center;
+    text-align: center;
+    justify-content: center;
 }
 
 .spaceWrapper{
