--- a/src/pages/Regions/Region.less
+++ b/src/pages/Regions/Region.less
@@ -35,6 +35,7 @@ h4.ant-typography {
                 width: 100%;
                 height: auto;
                 max-height: 360px;
+                object-fit: contain;
             }
             
             .mainMap {
