Card images styles fix

--- a/src/pages/City/Cities/Cities.less
+++ b/src/pages/City/Cities/Cities.less
@@ -29,6 +29,7 @@
 
             img {
                 height: 155px;
+                object-fit: contain;
             }
 
             .ant-skeleton-avatar {
