default cursor for unregistered users

--- a/src/pages/City/City/CheckActiveMembersForm.less
+++ b/src/pages/City/City/CheckActiveMembersForm.less
@@ -9,6 +9,11 @@
         text-decoration: underline;
     }
 
+    .cityMemberItem.notAccess :hover {
+        text-decoration: none;
+        cursor: default;
+    }
+
     .name {
         text-align: center;
         align-items: center;
