drop down delete select styles

--- a/src/App.less
+++ b/src/App.less
@@ -13,12 +13,12 @@
   margin: 64px 0 0;
 }
 
- .ant-menu:not(.ant-menu-inline) .ant-menu-submenu-open,
- .ant-menu-submenu-active {
-   color: wheat;
- }
+.ant-menu:not(.ant-menu-inline) .ant-menu-submenu-open,
+.ant-menu-submenu-active {
+  color: wheat;
+}
 
-.ant-form-inline .ant-form-item-with-help{
+.ant-form-inline .ant-form-item-with-help {
   margin-bottom: 0;
 }
 
@@ -26,16 +26,16 @@
   margin: 10px 0 0;
 }
 
-.ant-select-item.ant-select-item-option.ant-select-item-option-active{
-    background-color: #81877f !important;
+.ant-select-item.ant-select-item-option.ant-select-item-option-active {
+  background-color: #81877f !important;
 }
 
 .ant-mentions-dropdown-menu-item-active {
-    background-color: #81877f;
+  background-color: #81877f;
 }
 
 .ant-layout-sider {
-  &.ant-layout-sider-collapsed  {
+  &.ant-layout-sider-collapsed {
     box-shadow: none;
   }
 
@@ -48,27 +48,36 @@
 }
 
 .ant-menu-submenu-popup {
-  .ant-menu.ant-menu-sub{
-    background-color:#3c5438;
+  .ant-menu.ant-menu-sub {
+    background-color: #3c5438;
     padding: 5px 5px 10px 15px;
     color: white;
   }
 }
 
-.anticon.anticon-bell{
-  margin: 0;
-} 
+.ant-menu-item-selected {
+  color: unset !important;
+  .anticon {
+    color: unset !important;
+  }
+}
 
-.ant-progress{
+.anticon.anticon-bell {
+  margin: 0;
+}
+
+.ant-progress {
   margin: auto;
 }
-.ant-drawer-title{
+
+.ant-drawer-title {
   width: 90%;
 }
+
 .historyLink {
-    width: 100%;
-    margin-bottom: 15px;
-    border-bottom: 1px solid rgba(125, 125, 125, 0.3);
+  width: 100%;
+  margin-bottom: 15px;
+  border-bottom: 1px solid rgba(125, 125, 125, 0.3);
 }
 
 ::-webkit-scrollbar {
