add-link-on-list-certificates

--- a/src/pages/userPage/personalData/PersonalData.less
+++ b/src/pages/userPage/personalData/PersonalData.less
@@ -1,11 +1,12 @@
 .container{
     width: 100%;
-
     align-items: center;
     text-align: center;
     justify-content: center;
 }
-
+.Link{
+    display: inline-block;
+}
 .spaceWrapper{
     top: 0;
     left: 0;
