Styles fix for pictures (#995)
* object-fit: contain for all pictures

--- a/src/pages/City/City/City.less
+++ b/src/pages/City/City/City.less
@@ -43,6 +43,7 @@ h4.ant-typography {
                 width: 100%;
                 height: auto;
                 max-height: 360px;
+                object-fit: contain;
             }
 
             .mainMap {
