update distinctions table

--- a/src/pages/Distinction/DistinctionTable/Table.module.css
+++ b/src/pages/Distinction/DistinctionTable/Table.module.css
@@ -63,3 +63,9 @@
     display: flex;
     justify-content: space-between;
 }
+
+.selectedRow {
+    background-color: #f4f8f1;
+    box-shadow: 0 0 10px #f4f8f1;
+    color: #3D5438;
+  }
