update KV table

--- a/src/pages/KadraVykhovnykiv/Table.module.css
+++ b/src/pages/KadraVykhovnykiv/Table.module.css
@@ -79,4 +79,10 @@
         justify-content: center;
     }
 }
+
+.selectedRow {
+    background-color: #f4f8f1;
+    box-shadow: 0 0 10px #f4f8f1;
+    color: #3D5438;
+}
  
