update statistics table

--- a/src/pages/Statistics/StatisticsCities.less
+++ b/src/pages/Statistics/StatisticsCities.less
@@ -61,8 +61,17 @@
   padding: 20px;
   border-bottom: 1px solid #dee2e6;
 }
+
 .onClickRow {
-  background-color: rgb(240, 245, 240);
+  background-color: #f4f8f1;
+  box-shadow: 0 0 10px #f4f8f1;
+  color: #3D5438;
+
+  .ant-table-cell-fix-left {
+    background-color: #f4f8f1;
+    box-shadow: 0 0 10px #f4f8f1;
+    color: #3D5438;
+  }
 }
 
 @media (max-width: 920px) {
