--- a/src/pages/Statistics/StatisticsRegions.less
+++ b/src/pages/Statistics/StatisticsRegions.less
@@ -93,3 +93,15 @@
     margin-left: auto;
   }
 }
+
+.onClickRow {
+  background-color: #f4f8f1;
+  box-shadow: 0 0 10px #f4f8f1;
+  color: #3D5438;
+
+  .ant-table-cell-fix-left {
+    background-color: #f4f8f1;
+    box-shadow: 0 0 10px #f4f8f1;
+    color: #3D5438;
+  }
+}
