gallery and ui fixes

--- a/src/pages/Actions/ActionEvent/EventInfo/EventInfo.module.css
+++ b/src/pages/Actions/ActionEvent/EventInfo/EventInfo.module.css
@@ -2,7 +2,14 @@
     color: #3c5438;
 }
 
-.inputSearch {
-    width: 400px;
-    margin: 0 0 10px 0;
+.searchArea {
+    margin-bottom: 10px;
+    width: 30%;
+    align-self: center;
+}
+
+@media (max-width: 1000px) {
+    .searchArea {
+        width: 40%;
+    }
 }
