--- a/src/pages/Actions/ActionEvent/EventInfo/EventInfo.less
+++ b/src/pages/Actions/ActionEvent/EventInfo/EventInfo.less
@@ -29,8 +29,15 @@
 }
 
 .event-info-wrapper {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   margin: auto;
+  flex: 1 1;
+
+  @media (max-width: 800) {
+    flex-direction: column;
+  }
 }
 
 .event-info-header {
@@ -41,7 +48,7 @@
 
 .eventGallary{
   width: 100%;
-  margin-top: 40px;
+  margin: 40px 5px 0 5px;
   padding: 20px 20px 20px 20px;
   box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
@@ -71,14 +78,59 @@
   }
 }
 
+.galleryPicture {
+  position: relative;
+  margin: 3px;
+  padding-bottom: 0;
+  display: flex;
+}
+
+.galleryPicture:hover {
+  cursor: pointer;
+  transition: box-shadow 0.1s ease-in-out;
+  box-shadow: 0 0 0 2px var(--antd-wave-shadow-color);
+}
+
+.ant-card-cover img {
+  object-fit: cover;
+}
+
+.galleryImg .ant-image-img {
+  width: auto;
+  height: 200px;
+  display: block;
+  @media (max-width: 740px) {
+    height: 150px;
+  }
+}
+
+.galleryContainer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  height: auto;
+  max-height: 600px;
+  overflow-y: auto;
+  justify-content: center;
+  align-content: flex-start;
+  @media (max-width: 740px) {
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    justify-content: flex-start;
+  }
+}
+
 .participantsTable{
   width: 100%;
-  margin-top: 40px;
+  margin: 40px 5px 0 5px;
   padding: 20px 20px 20px 20px;
   box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
   display: flex;
   flex-direction: column;
+}
+
+.participantsTable div > .ant-row {
   justify-content: center;
 }
 
@@ -133,9 +185,14 @@
   .iconsFlexBase();
   border-color: black !important;
   box-shadow: 0 0 0 !important;
-  background-color: rgba(210, 210, 210, 0.5);
   margin-top: 7px;
   padding-bottom: 6px;
+}
+
+.rateFlex .ant-rate-star {
+  color: #3c5438;
+  stroke: #3c5438;
+  stroke-width: 10px;
 }
 
 .icon {
