update feedback modal

--- a/src/pages/Actions/ActionEvent/EventInfo/EventDetailsHeader.less
+++ b/src/pages/Actions/ActionEvent/EventInfo/EventDetailsHeader.less
@@ -1,26 +1,35 @@
+.descriptions {
+  max-width: 50%;
+  padding-top: 10px;
+}
+
+.eventLabel {
+  color: var(--antd-wave-shadow-color);
+  font-weight: bold;
+}
+
 .url {
-    font-weight: bold;
-    width: 190px;
-    font-size: 14px;
+  font-weight: bold;
+  width: 190px;
+  font-size: 14px;
 }
 
 /* unvisited link */
 .ant-typography a:link {
-    color: rgba(0, 0, 0, 0.65);
+  color: rgba(0, 0, 0, 0.65);
 }
 
 /* visited link */
 .ant-typography a:visited {
-    color: rgb(24, 68, 24);
+  color: rgb(24, 68, 24);
 }
 
 /* mouse over link */
 .ant-typography a:hover {
-    color: rgba(206, 50, 50, 0.65);
+  color: rgba(206, 50, 50, 0.65);
 }
 
 /* selected link */
 .ant-typography a:active {
-    color: grey;
+  color: grey;
 }
-  
