--- a/src/pages/Actions/ActionEvent/EventInfo/EventInfo.less
+++ b/src/pages/Actions/ActionEvent/EventInfo/EventInfo.less
@@ -41,14 +41,19 @@
 }
 
 .event-info-header {
+  width: 30%;
   box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   justify-content: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 5px;
 }
 
 .eventGallary {
   width: 100%;
-  margin: 40px 5px 0 5px;
+  margin: 0 5px 0 5px;
   padding: 20px 20px 20px 20px;
   box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
@@ -56,6 +61,11 @@
   align-items: center;
   justify-content: center;
   font-size: 10vw;
+}
+
+.event-info-and-gallery {
+  display: flex;
+  flex-direction: row;
 }
 
 .upploadButton {
@@ -104,22 +114,12 @@
   }
 }
 
-.feedbackInfo {
-  padding-left: 7px;
-  color: #999;
-  font-size: 0.4em;
-  &:hover {
-    cursor: pointer;
-    text-decoration: underline;
-  }
-}
-
 .galleryContainer {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   height: auto;
-  max-height: 600px;
+  max-height: 300px;
   overflow-y: auto;
   justify-content: center;
   align-content: flex-start;
@@ -176,6 +176,16 @@
   font-size: 34px;
   text-align: center;
   align-items: center;
+}
+
+.feedbackInfo {
+  padding-left: 7px;
+  color: #999;
+  font-size: 0.4em;
+  &:hover {
+    cursor: pointer;
+    text-decoration: underline;
+  }
 }
 
 .iconsFlex {
