--- a/src/pages/userPage/personalData/PersonalData.less
+++ b/src/pages/userPage/personalData/PersonalData.less
@@ -107,9 +107,10 @@
     box-shadow: 0 7px 14px rgba(13, 218, 47, 0.12), 0 1px 2px rgba(255, 0, 0, 0.24);
     transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
     margin-bottom: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    
+    padding-top: 18px;
+    padding-bottom: 18px;
+    padding-left: 18px;
+    padding-right: 18px;
 }
 
 .avatarWrapperUserFields:hover,
