--- a/src/pages/userPage/personalData/PersonalData.less
+++ b/src/pages/userPage/personalData/PersonalData.less
@@ -412,3 +412,8 @@
 .LinkText:hover{
     text-decoration: underline;
 }
+
+.LinkText.notAccess:hover{
+    text-decoration: none;
+    cursor: auto;
+}
