Added separate form for create City application

--- a/src/pages/Regions/Region.less
+++ b/src/pages/Regions/Region.less
@@ -203,7 +203,7 @@ h4.ant-typography {
 
     
     .backButton {
-        width: 180px;
+        width: auto;
         background-color: #3c5438;
         color: white;
     }
