update page layout

--- a/src/pages/Actions/ActionEvent/EventInfo/EventDetailsHeader.less
+++ b/src/pages/Actions/ActionEvent/EventInfo/EventDetailsHeader.less
@@ -1,6 +1,7 @@
 .descriptions {
-  max-width: 50%;
-  padding-top: 10px;
+  max-width: 100%;
+  padding: 10px 10px 0 10px;
+  text-overflow: ellipsis;
 }
 
 .eventLabel {
