--- a/src/pages/Actions/ActionEvent/EventInfo/EventFeedbackModal.less
+++ b/src/pages/Actions/ActionEvent/EventInfo/EventFeedbackModal.less
@@ -61,14 +61,17 @@
   flex-wrap: nowrap;
 }
 
-.ant-modal-body {
-  padding: 20px;
+.ant-feedback-modal {
+  .ant-modal-content {
+    .ant-modal-body {
+      padding: 5px 20px 5px 20px;
+    }
+  }
 }
 
 .warning-icon {
   color: var(--antd-wave-shadow-color);
   font-size: 2em;
-  //margin-right: 10px;
 }
 
 .feedback-forbidden-warning {
