--- a/src/pages/Actions/ActionEvent/EventInfo/EventInfo.less
+++ b/src/pages/Actions/ActionEvent/EventInfo/EventInfo.less
@@ -63,7 +63,7 @@
   width: 900px;
   box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  justify-content: center;
+  justify-content: space-around;
   display: flex;
   align-items: center;
   flex-direction: column;
