Fix #2760. Registered user/Зареєстрований користувач should not have an access to the Regions tab. (#1055)
* Fix #2760

Added roles check in AvatarAndProgressStatic.tsx. Added new style in PersonalData.less to change Link style based on active user role value.

* Added userApi import

Co-authored-by: Hryhorii Voloshyn <54772120+hryhoriivoloshyn@users.noreply.github.com>
Co-authored-by: Vladyslav Synieok <55637550+vsynieok@users.noreply.github.com>

--- a/src/pages/userPage/personalData/PersonalData.less
+++ b/src/pages/userPage/personalData/PersonalData.less
@@ -413,3 +413,8 @@
 .LinkText:hover{
     text-decoration: underline;
 }
+
+.LinkText.notAccess:hover{
+    text-decoration: none;
+    cursor: auto;
+}
