--- a/src/pages/Actions/ActionEvent/EventInfo/EventInfo.module.css
+++ b/src/pages/Actions/ActionEvent/EventInfo/EventInfo.module.css
@@ -1,8 +1,9 @@
 .userTableTitle {
-    color: #3c5438;
+  color: #3c5438;
 }
 
-.inputSearch {
-    width: 400px;
-    margin: 0 0 10px 0;
+.searchArea {
+  margin-bottom: 10px;
+  max-width: 500px;
+  align-self: center;
 }
